adding debug and test targets exluded from all

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ cmake_minimum_required(VERSION 3.2)
 project(MyApp VERSION 4.7.2 LANGUAGES C)
 
 # Primary tool for this project
-add_executable(mainTool
-    main.c)
+add_executable(mainTool main.c)
+
+# debugging tool
+add_executable(debugger EXCLUDE_FROM_ALL debug.c)
+
+# testing tool
+add_executable(tester EXCLUDE_FROM_ALL test.c)
 
